--- a/style.css
+++ b/style.css
@@ -110,8 +110,35 @@ a{
         .auto input[type = "submit"]:hover {
             background: #F8F335;
         }
-nav{
-    color: red;
+li{
+    list-style: none;
+}
+.side-menu{
+    position: fixed;
+    background: #EA6283;
+    width: 18vw;/*
+    height: 200px;*/
+    min-height: 700hv;
+    display: flex;
+    flex-direction: column;
+}
+.side-menu .category{
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.side-menu li{
+    font-size: 24px;
+    padding: 0px 0px;
+    padding-left: 0px;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+.side-menu li:hover{
+    background: white;
+    color: #EA6283;
 }
 main .container {
     padding: 0;
@@ -137,4 +164,7 @@ footer {
     position: absolute;
     left: 35px;
     padding: 50px;
+}
+.rules_text{
+    color: #EA6283;
 }
